Add new task from template page && new dataTemplateJSON in template entity