@@ -8,17 +8,16 @@ import com.hoatv.template.management.entities.Template;
 import com.hoatv.template.management.repositories.TemplateRepository;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
+import java.util.List;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class TemplateService {
 
+    private static final String TEMPLATE_NOT_FOUND_PREFIX_MSG = "Cannot find template with name: ";
     private final TemplateRepository templateRepository;
     private final TemplateReportService templateReportService;
 
@@ -30,7 +29,8 @@ public class TemplateService {
     @LoggingMonitor
     public TemplateReportDTO processTemplate(String templateName, String engine, String dataTemplateJson) {
         List<Template> templates = templateRepository.findTemplateByTemplateName(templateName);
-        ObjectUtils.checkThenThrow(templates.size() == 0, () -> new EntityNotFoundException("Cannot find template with name: " + templateName));
+        ObjectUtils.checkThenThrow(templates.isEmpty(),
+                () -> new EntityNotFoundException(TEMPLATE_NOT_FOUND_PREFIX_MSG + templateName));
         ObjectUtils.checkThenThrow(templates.size() > 1, "Cannot process template due to more than one template found");
         Template templateDTO = templates.get(0);
         return templateReportService.processTemplate(templateDTO, engine, dataTemplateJson);
@@ -39,7 +39,7 @@ public class TemplateService {
     @LoggingMonitor
     public void createTemplate(TemplateDTO templateDTO) {
         List<Template> templates = templateRepository.findTemplateByTemplateName(templateDTO.getTemplateName());
-        ObjectUtils.checkThenThrow(templates.size() > 0, "Template is already exist");
+        ObjectUtils.checkThenThrow(!templates.isEmpty(), "Template is already exist");
 
         Template template = Template.fromTemplateDTO(templateDTO);
         templateRepository.save(template);
@@ -48,17 +48,21 @@ public class TemplateService {
     @LoggingMonitor
     public List<TemplateDTO> getTemplatesByName(String templateName) {
         List<Template> templates = templateRepository.findTemplateByTemplateName(templateName);
-        ObjectUtils.checkThenThrow(templates.size() == 0, () -> new EntityNotFoundException("Cannot find template with name: " + templateName));
-        return templates.stream().map(Template::toTemplateDTO).collect(Collectors.toList());
+        ObjectUtils.checkThenThrow(templates.isEmpty(),
+                () -> new EntityNotFoundException(TEMPLATE_NOT_FOUND_PREFIX_MSG + templateName));
+        return templates.stream().map(Template::toTemplateDTO).toList();
     }
 
     @LoggingMonitor
-    public TemplateDTO updateTemplateByName(String templateName, String templateText) {
-        List<Template> templates = templateRepository.findTemplateByTemplateName(templateName);
-        ObjectUtils.checkThenThrow(templates.size() == 0, () -> new EntityNotFoundException("Cannot find template with name: " + templateName));
-        ObjectUtils.checkThenThrow(templates.size() > 1, "Cannot process template due to more than one template found");
+    public TemplateDTO updateTemplateByName(TemplateDTO templateDTO) {
+        List<Template> templates = templateRepository.findTemplateByTemplateName(templateDTO.getTemplateName());
+        ObjectUtils.checkThenThrow(templates.isEmpty(),
+                () -> new EntityNotFoundException(TEMPLATE_NOT_FOUND_PREFIX_MSG + templateDTO.getTemplateName()));
+        ObjectUtils.checkThenThrow(templates.size() > 1,
+                "Cannot process template due to more than one template found");
         Template template = templates.get(0);
-        template.setTemplateText(templateText);
+        template.setTemplateText(templateDTO.getTemplateText());
+        template.setDataTemplateJSON(templateDTO.getDataTemplateJSON());
         templateRepository.save(template);
         return template.toTemplateDTO();
     }
